# acm.timus.ru

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  task.h  task1000.cpp  task1001.cpp  task1197.cpp  task1264.cpp  task1293.cpp  task1409.cpp  task1785.cpp  task1820.cpp  task1877.cpp  task1880.cpp  task2001.cpp  task2012.cpp  task2066.cpp  task2100.cpp
tests/: test_main.cpp
